<resources>
    <string name="app_name">SuliraApp</string>
    <string name="welcome_to_sulira">Welcome to </string>
    <string name="sulira">Sulira</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="sign_in">Sign in</string>
    <string name="get_started">Get Started</string>
    <string name="smart_health">Smart Health</string>
    <string name="hello">Hello!</string>
    <string name="sign_in_your_account">Sign in your account</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="continue_without_password">Continue without Password</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="sign_up">Sign up</string>
    <string name="conitnue">Continue</string>
    <string name="next">Next</string>
    <string name="step_1_20">Step 1/13</string>
    <string name="let_s_start_with_your_mobile_number">Let\'s start with your \n mobile number</string>
    <string name="number_we_can_use_to_reach_you">Number we can use to reach you</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="verify_now">Verify Now</string>
    <string name="send_me_a_new_code">Send me a new code</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="step_2_20">Step 2/20</string>
    <string name="step_3_20">Step 3/20</string>
    <string name="privacy_and_terms">Privacy and Terms</string>
    <string name="sulira_is_fully_committed">SULIRA is fully committed with \nyour privacy, remember you can \ncontrol when, where and who gets\n to access to your information.</string>
    <string name="do_you_agree_to_the_terms_and_n_privacy_policy">Do you agree to the Terms and\n Privacy Policy.</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="skip">Skip</string>
    <string name="enable_face_id">Enable Finger-ID</string>
    <string name="if_you_enable_face_id_you_don_t_need_to_enter_your_password_when_you_login">If you enable Finger print login, you don’t \nneed to enter your password when \nyou login.</string>
    <string name="activate">Activate</string>
    <string name="which_one_are_you">Which one are you?</string>
    <string name="select_your_gender_or_simply_skip_this_step">Select your gender or simply \nskip this step.</string>
    <string name="prefer_not_to_choose">Prefer not to choose</string>
    <string name="what_is_your_weight">What is your weight?</string>
    <string name="what_is_your_height">What is your Height?</string>
    <string name="what_is_your_blood_type">What is your Blood Type?</string>
    <string name="do_you_exercise">Do you Exercise ?</string>
    <string name="if_yes_how_often">If yes? How often?</string>
    <string name="time_to_customize_your_interest">Time to customize \nyour interest</string>
    <string name="you_might_change_it_later">You might change it later</string>
    <string name="let_us_know_how_we_ncan_help_you">Let us know how we \ncan help you</string>
    <string name="you_always_can_change_this_later">You always can change this later</string>
    <string name="health_conditions_if_any">Health Conditions if any ?</string>
    <string name="select">Select:</string>
    <string name="do_you_want_to_track_it">Do you want to track it?</string>
    <string name="set_a_reminder">Set a reminder to alert you about basic \nhealth routines you should follow.</string>
    <string name="how_you_want_to_track_it">how you want to track it</string>
    <string name="manually">Manually</string>
    <string name="connect_to_smart_device">Connect to Smart Device</string>
    <string name="at_what_time_would_you_like_to_sleep">At what time would you \nlike to sleep?</string>
    <string name="sets_a_reminder_to_alert_you">Sets a reminder to alert you at what \npoint you should go to sleep.</string>
    <string name="choose_a_day_to_weigh_yourself_and_we_nwill_send_you_the_reminder">Choose a day to weigh yourself and we \nwill send you the reminder</string>
    <string name="selected_day_3">SELECTED DAY (0)</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="set_reminder">Set reminder</string>
    <string name="do_you_want_to_turn_on_notifications">Do you want to turn \non notifications?</string>
    <string name="allow">Allow</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="how_custom_profile_picture">How do you want to look alike? or \nchoose your custom profile \npicture.</string>
    <string name="add_custom_photo">Add Custom Photo</string>
    <string name="you_are_ready_to_go">You are ready to go!</string>
    <string name="thanks_for_taking">Thanks for taking the time to \nprovide your personal information. \nNow it\'s time to explore the app. \nStay smart , Stay healthy.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="based_on_your_overall_health_ntest_your_score_is_84_and_nconsider_good">Based on your overall health \ntest, your score is 84 and \nconsider good..</string>
    <string name="read_more">Read more..</string>
    <string name="metrics">Metrics</string>
    <string name="heart_rate">HEART RATE</string>
    <string name="bpm">bpm</string>
    <string name="weight">Weight</string>
    <string name="kg">kg</string>
    <string name="sugar">Sugar</string>
    <string name="sleep">SLEEP</string>
    <string name="explore">Explore</string>
    <string name="search_topic">Search topic</string>
    <string name="topics_for_you">Topics For You</string>
    <string name="get_inspired">Get Inspired</string>
    <string name="collection">Collection</string>
    <string name="_20_minutes_outdoor_can_make_you_less_stress">20-minutes Outdoor Can Make You Less Stress</string>
    <string name="news_feed">News Feed</string>
    <string name="health">Health</string>
    <string name="go_premium">Go Premium</string>
    <string name="virus">Virus</string>
    <string name="large_text">"Material is the metaphor.\n\n""A material metaphor is the unifying theory of a rationalized space and a system of motion.""The material is grounded in tactile reality, inspired by the study of paper and ink, yet ""technologically advanced and open to imagination and magic.\n""Surfaces and edges of the material provide visual cues that are grounded in reality. The ""use of familiar tactile attributes helps users quickly understand affordances. Yet the ""flexibility of the material creates new affordances that supercede those in the physical ""world, without breaking the rules of physics.\n""The fundamentals of light, surface, and movement are key to conveying how objects move, ""interact, and exist in space and in relation to each other. Realistic lighting shows ""seams, divides space, and indicates moving parts.\n\n""Bold, graphic, intentional.\n\n""The foundational elements of print based design typography, grids, space, scale, color, ""and use of imagery guide visual treatments. These elements do far more than please the ""eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge ""imagery, large scale typography, and intentional white space create a bold and graphic ""interface that immerse the user in the experience.\n""An emphasis on user actions makes core functionality immediately apparent and provides ""waypoints for the user.\n\n""Motion provides meaning.\n\n""Motion respects and reinforces the user as the prime mover. Primary user actions are ""inflection points that initiate motion, transforming the whole design.\n""All action takes place in a single environment. Objects are presented to the user without ""breaking the continuity of experience even as they transform and reorganize.\n""Motion is meaningful and appropriate, serving to focus attention and maintain continuity. ""Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n""3D world.\n\n""The material environment is a 3D space, which means all objects have x, y, and z ""dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the ""positive z-axis extending towards the viewer. Every sheet of material occupies a single ""position along the z-axis and has a standard 1dp thickness.\n""On the web, the z-axis is used for layering and not for perspective. The 3D world is ""emulated by manipulating the y-axis.\n\n""Light and shadow.\n\n""Within the material environment, virtual lights illuminate the scene. Key lights create ""directional shadows, while ambient light creates soft shadows from all angles.\n""Shadows in the material environment are cast by these two light sources. In Android ""development, shadows occur when light sources are blocked by sheets of material at ""various positions along the z-axis. On the web, shadows are depicted by manipulating the ""y-axis only. The following example shows the card with a height of 6dp.\n\n""Resting elevation.\n\n""All material objects, regardless of size, have a resting elevation, or default elevation ""that does not change. If an object changes elevation, it should return to its resting ""elevation as soon as possible.\n\n""Component elevations.\n\n""The resting elevation for a component type is consistent across apps (e.g., FAB elevation ""does not vary from 6dp in one app to 16dp in another app).\n""Components may have different resting elevations across platforms, depending on the depth ""of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n""Responsive elevation and dynamic elevation offsets.\n\n""Some component types have responsive elevation, meaning they change elevation in response ""to user input (e.g., normal, focused, and pressed) or system events. These elevation ""changes are consistently implemented using dynamic elevation offsets.\n""Dynamic elevation offsets are the goal elevation that a component moves towards, relative ""to the component’s resting state. They ensure that elevation changes are consistent ""across actions and component types. For example, all components that lift on press have ""the same elevation change relative to their resting elevation.\n""Once the input event is completed or cancelled, the component will return to its resting ""elevation.\n\n""Avoiding elevation interference.\n\n""Components with responsive elevations may encounter other components as they move between ""their resting elevations and dynamic elevation offsets. Because material cannot pass ""through other material, components avoid interfering with one another any number of ways, ""whether on a per component basis or using the entire app layout.\n""On a component level, components can move or be removed before they cause interference. ""For example, a floating action button (FAB) can disappear or move off screen before a ""user picks up a card, or it can move if a snackbar appears.\n""On the layout level, design your app layout to minimize opportunities for interference. ""For example, position the FAB to one side of stream of a cards so the FAB won’t interfere ""when a user tries to pick up one of cards.\n\n" </string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="type_your_message">Type your message...</string>
    <string name="how_are_you_feeling_today">How are you feeling today?</string>
    <string name="employer_code">Employer Code</string>
</resources>