<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_back">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dim40dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/dim25dp"
                android:layout_height="@dimen/dim25dp"
                android:layout_alignParentStart="true"
                android:layout_margin="@dimen/dim15dp"
                android:src="@drawable/down_arrow" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dim150dp"
                android:layout_height="@dimen/dim8dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dim20dp"
                android:src="@drawable/half_filled" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/dim10dp"
                android:fontFamily="@font/rubik"
                android:text="@string/skip"
                android:textColor="@color/app_color"
                android:textSize="@dimen/dim16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/weighIcon"
                android:layout_width="@dimen/dim200dp"
                android:layout_height="@dimen/dim200dp"
                android:layout_below="@+id/ivBack"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dim20dp"
                android:src="@drawable/weight_reminder" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/letsStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/weighIcon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dim10dp"
                android:fontFamily="@font/rubik_medium"
                android:gravity="center"
                android:text="Weight Reminder"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvReminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/letsStart"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dim20dp"
                android:fontFamily="@font/rubik"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/dim3dp"
                android:text="@string/choose_a_day_to_weigh_yourself_and_we_nwill_send_you_the_reminder"
                android:textColor="@color/light_blue_black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSelectedDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvReminder"
                android:layout_marginStart="@dimen/dim20dp"
                android:layout_marginTop="@dimen/dim20dp"
                android:fontFamily="@font/rubik"
                android:text="@string/selected_day_3"
                android:textColor="@color/light_blue_black" />

            <RelativeLayout
                android:id="@+id/rlDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvSelectedDays"
                android:layout_margin="@dimen/dim20dp"
                android:paddingStart="@dimen/dim50dp"
                android:paddingEnd="@dimen/dim50dp">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cbMonday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:backgroundTint="@color/app_color"
                    android:buttonTint="@color/app_color"
                    android:fontFamily="@font/rubik"
                    android:text="@string/monday" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cbTuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:backgroundTint="@color/app_color"
                    android:buttonTint="@color/app_color"
                    android:fontFamily="@font/rubik"
                    android:text="@string/tuesday" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cbWednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cbMonday"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="@dimen/dim10dp"
                    android:backgroundTint="@color/app_color"
                    android:buttonTint="@color/app_color"
                    android:fontFamily="@font/rubik"
                    android:text="@string/wednesday" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cbThursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cbTuesday"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/dim10dp"
                    android:backgroundTint="@color/app_color"
                    android:buttonTint="@color/app_color"
                    android:fontFamily="@font/rubik"
                    android:text="@string/thursday" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cbFriday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cbWednesday"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="@dimen/dim10dp"
                    android:backgroundTint="@color/app_color"
                    android:buttonTint="@color/app_color"
                    android:fontFamily="@font/rubik"
                    android:text="@string/friday" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cbSaturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cbThursday"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/dim10dp"
                    android:backgroundTint="@color/app_color"
                    android:buttonTint="@color/app_color"
                    android:fontFamily="@font/rubik"
                    android:text="@string/saturday" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cbSunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cbFriday"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="@dimen/dim10dp"
                    android:backgroundTint="@color/app_color"
                    android:buttonTint="@color/app_color"
                    android:fontFamily="@font/rubik"
                    android:text="@string/sunday" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btSetReminder"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlDays"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dim40dp"
                android:layout_marginBottom="@dimen/dim40dp"
                android:background="@drawable/rect_fill_back"
                android:fontFamily="@font/rubik"
                android:text="@string/set_reminder"
                android:textColor="@color/white" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>